--- a/finance/finance-emi-calculator.html
+++ b/finance/finance-emi-calculator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/finance/finance-emi-calculator.html">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free EMI Calculator - Calculate your Equated Monthly Installment for home loans, car loans, and personal loans. Accurate EMI calculation with detailed breakdown.">
