--- a/finance/finance-sip-calculator.html
+++ b/finance/finance-sip-calculator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/finance/finance-sip-calculator.html">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free SIP Calculator - Calculate your Systematic Investment Plan returns with step-up SIP, goal-based planning, and detailed year-wise breakdown. Compare SIP vs Lumpsum investments.">
