--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/percentage-calculator.html">
   <meta charset="UTF-8">
   <title>Percentage Calculator for Students – Student Helper Tools</title>
   <meta name="description" content="Free online percentage calculator for students. Easily calculate exam percentage using obtained and total marks. Fast, accurate, and mobile-friendly.">
