--- a/simple-compound-interest-calculator.html
+++ b/simple-compound-interest-calculator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/simple-compound-interest-calculator.html">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -735,6 +736,7 @@
 
 </body>
 </html>
+
 
 
 
