--- a/finance/finance-emi-calculator.html
+++ b/finance/finance-emi-calculator.html
@@ -517,6 +517,80 @@
             }
         }
     </style>
+
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "What is EMI?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "EMI stands for Equated Monthly Installment. It is a fixed payment amount that you make to the lender every month until your loan is fully repaid."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How is EMI calculated?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "EMI is calculated using a mathematical formula that considers the loan amount, interest rate, and loan tenure. It ensures the borrower pays a fixed monthly amount over the loan period."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Does EMI include interest?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, each EMI includes both the principal repayment and the interest charged by the lender. In the early months, the interest portion is higher, and later the principal portion increases."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can EMI change during the loan tenure?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "EMI remains fixed in loans with a fixed interest rate. However, in loans with a floating or variable interest rate, EMI may increase or decrease depending on changes in market interest rates."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What factors affect EMI amount?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The EMI amount mainly depends on three factors: the loan amount, the annual interest rate, and the loan tenure. Higher loan amounts or interest rates increase EMI, while a longer tenure reduces monthly EMI but increases total interest."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is the EMI calculator accurate?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, an EMI calculator uses the standard formula used by financial institutions. However, the final EMI from a lender may differ slightly due to processing fees, insurance, or other charges."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How can I reduce my EMI?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "You can reduce your EMI by increasing the loan tenure, making a larger down payment, choosing a lower interest rate, or making part-prepayments to reduce the outstanding principal."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Why should I use an EMI calculator before taking a loan?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "An EMI calculator helps you understand your monthly payment in advance, compare loan options, plan your budget, and avoid financial stress by knowing the total interest and repayment amount."
+      }
+    }
+  ]
+}
+</script>
+	
 </head>
 <body>
     <header>
