--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="https://advaitpatel69-beep.github.io/Advait.github.io/favicon.png">
   <meta charset="UTF-8">
   <title>About Us – Student Helper Tools</title>
   <meta name="description" content="Learn about Student Helper Tools, an educational website providing free calculators and academic resources for students.">
