--- a/cgpa-calculator.html
+++ b/cgpa-calculator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="https://advaitpatel69-beep.github.io/Advait.github.io/favicon.png">
   <link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/cgpa-calculator.html">
   <meta charset="UTF-8">
   <title>CGPA Calculator for Students – Student Helper Tools </title>
