Add favicon link to contact.html
Added a favicon link to the contact page.

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="https://advaitpatel69-beep.github.io/Advait.github.io/favicon.png">
   <meta charset="UTF-8">
   <title>Contact Us – Student Helper Tools</title>
   <meta name="description" content="Contact Student Helper Tools for questions, feedback, or support related to our student calculators and educational tools.">
