--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="https://advaitpatel69-beep.github.io/Advait.github.io/favicon.png">
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/index.html">
   <meta charset="UTF-8">
@@ -170,6 +171,7 @@
 
 </body>
 </html>
+
 
 
 
