Add favicon link to percentage-calculator.html
Added a favicon link to the percentage calculator HTML.

--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="https://advaitpatel69-beep.github.io/Advait.github.io/favicon.png">
   <link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/percentage-calculator.html">
   <meta charset="UTF-8">
   <title>Percentage Calculator for Students – Student Helper Tools</title>
