--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="https://advaitpatel69-beep.github.io/Advait.github.io/favicon.png">
   <meta charset="UTF-8">
   <title>Privacy Policy – Student Helper Tools</title>
   <meta name="description" content="Privacy Policy for Student Helper Tools explaining how user information is collected, used, and protected.">
