Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Free online student tools including Percentage and CGPA calculators. Designed for engineering, commerce, and school students. Fast, accurate, and mobile-friendly.">
   <meta name="keywords" content="student tools, percentage calculator, CGPA calculator, online calculator, student helper">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://advaitpatel69-beep.github.io/Advait.github.io/style.css">
 </head>
 <body>
 
@@ -222,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
