--- a/simple-compound-interest-calculator.html
+++ b/simple-compound-interest-calculator.html
@@ -5,7 +5,7 @@
     <link rel="canonical" href="https://advaitpatel69-beep.github.io/Advait.github.io/simple-compound-interest-calculator.html">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://advaitpatel69-beep.github.io/Advait.github.io/style.css">
     <title>Simple & Compound Interest Calculator for Students</title>
     <meta name="description" content="Free simple and compound interest calculator for students. Calculate SI, CI, total amount and interest with formulas and examples.">
     <meta name="keywords" content="simple interest calculator, compound interest calculator, SI CI calculator, interest calculator for students, simple and compound interest formula, online interest calculator">
@@ -23,7 +23,7 @@
     </script>
     <script id="MathJax-script" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     
-    <style>
+ <style>
         /* UPDATED STYLES FOR PROFESSIONAL LOOK */
         :root {
             --primary: #198754; /* A solid, professional financial green */
@@ -48,6 +48,15 @@
             /* More defined, professional shadow */
             box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15); 
             overflow: hidden;
+        }
+
+        /* HEADER & TABS */
+        .header {
+            text-align: center;
+            padding: 2rem 1rem 1rem;
+            /* Use the professional primary color */
+            background-color: var(--primary); 
+            color: white;
         }
         
         h1 { margin: 0 0 5px 0; font-size: 1.8rem; }
@@ -250,214 +259,6 @@
         .term-definition em {
             font-weight: normal;
             color: #6c757d;
-        }
-
-        @media (max-width: 768px) {
-            nav {
-                display: none;
-            }
-
-            .hamburger {
-                display: flex;
-            }
-
-            h1 {
-                font-size: 2rem;
-            }
-
-            .tenure-group {
-                grid-template-columns: 1fr;
-            }
-
-            .button-group {
-                flex-direction: column;
-            }
-
-            .result-value {
-                font-size: 1.5rem;
-            }
-
-            .calculator-section {
-                padding: 1.5rem;
-            }
-
-            .content-section {
-                padding: 1.5rem;
-            }
-
-            .charts-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .chart-container {
-                height: 250px;
-            }
-
-            th, td {
-                padding: 0.5rem;
-                font-size: 0.9rem;
-            }
-        }
-
-        @media (min-width: 769px) and (max-width: 1024px) {
-            .container {
-                padding: 2rem 2rem;
-            }
-        }
-
-footer {
-            background: #2d3748;
-            color: white;
-            padding: 3rem 0 1rem;
-            margin-top: 4rem;
-        }
-
-        .footer-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            margin-bottom: 2rem;
-        }
-
-        .footer-section h3 {
-            margin-bottom: 1rem;
-            color: #667eea;
-        }
-
-        .footer-section ul {
-            list-style: none;
-        }
-
-        .footer-section ul li {
-            margin-bottom: 0.5rem;
-        }
-
-        .footer-section a {
-            color: #cbd5e0;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .footer-section a:hover {
-            color: white;
-        }
-
-        .copyright {
-            text-align: center;
-            padding-top: 2rem;
-            border-top: 1px solid rgba(255,255,255,0.1);
-            color: #cbd5e0;
-        }
-
-        header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 1rem 0;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        .header-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        /* ===== Links ===== */
-a {
-  color: #007bff;
-  text-decoration: none;
-  transition: color 0.2s;
-}
-
-a:hover {
-  color: #0056b3;
-  text-decoration: underline;
-}
-
-.header-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .site-title {
-            font-size: 1.5rem;
-            font-weight: 700;
-        }
-
-nav {
-            display: flex;
-            gap: 2rem;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            font-weight: 500;
-            transition: opacity 0.3s;
-        }
-
-        nav a:hover {
-            opacity: 0.8;
-        }
-
-        .hamburger {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-            gap: 4px;
-            /* New styles to reset button defaults */
-            background: none;
-            border: none;
-            padding: 0;
-        }
-
-        .hamburger span {
-            width: 25px;
-            height: 3px;
-            background: white;
-            border-radius: 3px;
-            transition: 0.3s;
-        }
-
-        .mobile-nav {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 0;
-            right: 0;
-            background: #667eea;
-            flex-direction: column;
-            padding: 1rem;
-            gap: 1rem;
-        }
-
-        .mobile-nav.active {
-            display: flex;
-        }
-
-        .mobile-nav a {
-            color: white;
-            text-decoration: none;
-            padding: 0.5rem;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-
-        .mobile-nav a:hover {
-            background: rgba(255,255,255,0.1);
         }
 
     </style>
@@ -990,6 +791,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
 
 
