Add FAQ schema for SIP calculator

--- a/finance/finance-sip-calculator.html
+++ b/finance/finance-sip-calculator.html
@@ -571,6 +571,80 @@
             }
         }
     </style>
+
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "What is SIP?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "SIP (Systematic Investment Plan) is a method of investing a fixed amount regularly (usually monthly) to build wealth over time through compounding."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How accurate is this SIP calculator?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "This calculator provides estimated results based on the return rate you enter. Actual returns depend on market performance and may be higher or lower."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What return rate should I use?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "If you are not sure, you can use 10%–12% as a general long-term assumption. Conservative investors may use 8%–10% and aggressive assumptions may be 12%–15%."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is Step-up SIP?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Step-up SIP means increasing your SIP amount every year by a fixed percentage. It can significantly improve your final investment value over long durations."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can SIP returns be negative?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes. Since SIP is usually linked to mutual funds or market investments, returns can be negative in the short term. Over long term, returns often improve with compounding."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is SIP better than lump sum?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "SIP helps reduce risk by investing regularly and averaging market ups and downs. Lump sum may perform better if invested at the right time, but it carries higher timing risk."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I stop SIP anytime?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "In most cases, SIP can be paused or stopped. However, long-term investing is generally more beneficial due to the power of compounding."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Does this calculator include inflation?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "If your calculator has an inflation adjustment option, it can estimate the real value of money. Otherwise, results shown are nominal estimates."
+      }
+    }
+  ]
+}
+</script>
+
 </head>
 <body>
      <header>
