--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     </p>
 
     <ul>
-      <li><a href="percentage-calculator.html">Percentage Calculator</a></li>
-      <li><a href="cgpa-calculator.html">CGPA Calculator</a></li>
-      <li><a href="simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
+      <li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/percentage-calculator.html">Percentage Calculator</a></li>
+      <li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/cgpa-calculator.html">CGPA Calculator</a></li>
+      <li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
     </ul>
     
     <span class="nav-disabled">More student calculators coming soon</span>
@@ -181,12 +181,12 @@
             <div class="footer-section">
                 <h3>Student Tools</h3>
                 <ul>
-		                <li><a href="/Advait.github.io/finance/finance-emi-calculator.html">EMI Calculator</a></li>
-		                <li><a href="/Advait.github.io/finance/finance-sip-calculator.html">SIP Calculator</a></li>
-                    <li><a href="/Advait.github.io/simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
+					<li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/percentage-calculator.html">Percentage Calculator</a></li>
+					<li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/cgpa-calculator.html">CGPA Calculator</a></li>
+      				<li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
                 
-                    <li><span class="coming-soon">FD Calculator (Coming Soon)</span></li>
-                    <li><span class="coming-soon">GST Calculator (Coming Soon)</span></li>
+                    <li><span class="coming-soon">MATRIX Calculator (Coming Soon)</span></li>
+                    <li><span class="coming-soon">STATISTIC Calculator (Coming Soon)</span></li>
                 </ul>
             </div>
 
@@ -222,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
