--- a/finance/finance-emi-calculator.html
+++ b/finance/finance-emi-calculator.html
@@ -836,6 +836,20 @@
 
                 </ul>
             </div>
+
+			<div class="footer-section">
+                <h3>Student Tools</h3>
+                <ul>
+					<li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/percentage-calculator.html">Percentage Calculator</a></li>
+					<li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/cgpa-calculator.html">CGPA Calculator</a></li>
+      				<li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
+                
+                    <li><span class="coming-soon">MATRIX Calculator (Coming Soon)</span></li>
+                    <li><span class="coming-soon">STATISTIC Calculator (Coming Soon)</span></li>
+                </ul>
+            </div>
+
+			
             <div class="footer-section">
                 <h3>Finance Tools</h3>
                 <ul>
@@ -855,7 +869,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; Finance Calculators. All rights reserved.</p>
+            <p>&copy; Student Helper Tools. All rights reserved.</p>
         </div>
     </footer>
 
