--- a/finance/finance-sip-calculator.html
+++ b/finance/finance-sip-calculator.html
@@ -998,6 +998,19 @@
               <li><a href="/Advait.github.io/privacy-policy.html">Privacy Policy</a></li>
             </ul>
         </div>
+
+		<div class="footer-section">
+                <h3>Student Tools</h3>
+                <ul>
+					<li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/percentage-calculator.html">Percentage Calculator</a></li>
+					<li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/cgpa-calculator.html">CGPA Calculator</a></li>
+      				<li><a href="https://advaitpatel69-beep.github.io/Advait.github.io/simple-compound-interest-calculator.html">Simple & Compound Interest Calculator</a></li>
+                
+                    <li><span class="coming-soon">MATRIX Calculator (Coming Soon)</span></li>
+                    <li><span class="coming-soon">STATISTIC Calculator (Coming Soon)</span></li>
+                </ul>
+            </div>
+		
         <div class="footer-section">
             <h3>Finance Tools</h3>
             <ul>
@@ -1017,7 +1030,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>&copy; Finance Calculators. All rights reserved.</p>
+        <p>&copy; Student Helper Tools. All rights reserved.</p>
     </div>
 </footer>
 
